# GenIA-E2ETest

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  Test_Case_21.feature  Test_Case_3.feature  e2eTestGen.py  genIAE2ETest.py  interactive_console_output.xml  log.html  main.py  output.xml  pyproject.toml  report.html  requirements.txt  signIn.feature  signUp.feature  test1.robot  teste.py  testeReaproveitado.py  tokenAPI.env
.data/: data.json  data1.json  data10.json  data12.json  data13.json  data14.json  data15.json  data16.json  data4.json  data5.json  data7.json  data8.json
.dataCrawL4AI/: dataCrawl4AI1.json  dataCrawl4AI2.json  dataCrawl4AI3.json  dataCrawl4AI4.json  dataCrawl4AI5.json  dataCrawl4AI6.json  dataCrawl4AI8.json  dataCrawl4AI9.json
.dataExample/: data.txt  data1.txt
.dataOpenAI/: dataOpenAI.json  dataOpenAI1.json  dataOpenAI2.json  dataOpenAI3.json  dataOpenAI4.json  dataOpenAI5.json  dataOpenAI6.json  dataOpenAI7.json
.dataOpenAIFinal/: dataOpenAIFinal.json  dataOpenAIFinal1.json  dataOpenAIFinal2.json  dataOpenAIFinal3.json  dataOpenAIFinal4.json
.robot/: log.html  output.xml  report.html  test1.robot  test10.robot  test2.robot  test3.robot  test4.robot  test5.robot  test6.robot  test7.robot  test8.robot  test9.robot
Experiment/: GenIA-E2ETest.xlsx
Experimento/: GenIA-E2ETest.xlsx
Prompts/: RobotTestGeneration.txt  TestCaseRestructuring.txt  UIElementExtraction.txt  UIElementRefinement .txt
TestCaseExamples/: App1-TestCase1.feature  App1-TestCase2.feature  App1-TestCase3.feature  App1-TestCase4.feature  (+8 more)
(+227 files in other folders)
